templates/recipes/deploy/kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
